test/variable/use_self_as_var.lox
// error: expect variable name
var self = "value"
